[gd_scene format=3 uid="uid://cexprfkklefv2"]

[ext_resource type="Script" uid="uid://dlqmckxwkbwcu" path="res://addons/ToGOList/to_go_list.gd" id="1_sbral"]
[ext_resource type="Texture2D" uid="uid://b1tip86ctxeil" path="res://addons/ToGOList/ToGOList.svg" id="2_o64s7"]

[node name="BoxContainer" type="BoxContainer" unique_id=1326112533]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sbral")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2132959628]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="VBoxContainer" unique_id=136949077]
layout_mode = 2
size_flags_vertical = 1
text = "ToDoList_Panel_Size:"

[node name="ToDoList_Panel_Size" type="HSlider" parent="VBoxContainer" unique_id=1347153457]
layout_mode = 2
size_flags_vertical = 1
min_value = 30.0
max_value = 540.0
step = 30.0
value = 30.0

[node name="Panel" type="Panel" parent="VBoxContainer" unique_id=100728948]
clip_contents = true
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_vertical = 10

[node name="Missions_List_Container" type="ScrollContainer" parent="VBoxContainer/Panel" unique_id=1009711185]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Missions_List" type="VBoxContainer" parent="VBoxContainer/Panel/Missions_List_Container" unique_id=1158770584]
layout_mode = 2

[node name="Save" type="Button" parent="VBoxContainer/Panel" unique_id=1702708270]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -31.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Save"

[node name="Misson" type="LineEdit" parent="." unique_id=1291522086]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 16

[node name="Buttons_Container" type="VBoxContainer" parent="." unique_id=1034618195]
layout_mode = 2
alignment = 2

[node name="Info" type="Button" parent="Buttons_Container" unique_id=1729389666]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 16
text = "Info"

[node name="Add" type="Button" parent="Buttons_Container" unique_id=37936582]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 16
text = "Add"

[node name="Window" type="Window" parent="." unique_id=1129679700]
oversampling_override = 1.0
title = "Info"
position = Vector2i(277, 36)
size = Vector2i(500, 500)
visible = false

[node name="ToGoList" type="Sprite2D" parent="Window" unique_id=937061056]
position = Vector2(239, 80)
scale = Vector2(0.18249993, 0.18249993)
texture = ExtResource("2_o64s7")

[node name="GitPage" type="LinkButton" parent="Window" unique_id=73504267]
offset_left = 184.0
offset_top = 154.0
offset_right = 296.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 19
text = "Github Page"
uri = "https://github.com/TheMR2/ToGoList"

[node name="HBoxContainer" type="HBoxContainer" parent="Window" unique_id=983567065]
offset_left = 32.0
offset_top = 245.0
offset_right = 493.0
offset_bottom = 290.0
theme_override_constants/separation = 32

[node name="Linkdin" type="LinkButton" parent="Window/HBoxContainer" unique_id=298338024]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.4392157, 0.8745098, 1)
theme_override_font_sizes/font_size = 32
text = "Linkdin"
uri = "https://www.linkedin.com/notifications/?filter=all"

[node name="Youtube" type="LinkButton" parent="Window/HBoxContainer" unique_id=2143577067]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "YouTube"
uri = "https://www.youtube.com/@MR-np5nl"

[node name="Facebook" type="LinkButton" parent="Window/HBoxContainer" unique_id=1143014755]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.8745098, 1)
theme_override_font_sizes/font_size = 32
text = "Facebook"
uri = "https://www.facebook.com/"

[node name="The_MR" type="LinkButton" parent="Window" unique_id=1051166252]
offset_left = 127.0
offset_top = 349.0
offset_right = 368.0
offset_bottom = 437.0
theme_override_colors/font_color = Color(0.34117648, 0.5294118, 0.8745098, 1)
theme_override_font_sizes/font_size = 64
text = "The_MR"
uri = "https://the-mr.netlify.app/"

[connection signal="value_changed" from="VBoxContainer/ToDoList_Panel_Size" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Panel/Save" to="." method="_on_save_pressed"]
[connection signal="editing_toggled" from="Misson" to="." method="_on_misson_editing_toggled"]
[connection signal="pressed" from="Buttons_Container/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="Buttons_Container/Add" to="." method="_on_add_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
